Complete features, screenshots

--- a/DREAMPLANR/index.html
+++ b/DREAMPLANR/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>DREAMPLANR Elevator Pitch</title>
+    <title>DREAMPLANR Web Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">DREAMPLANR</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">DREAMPLANR.</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -44,10 +44,10 @@
               <a class="nav-link js-scroll-trigger" href="#download">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">What this app do</a>
+              <a class="nav-link js-scroll-trigger" href="#features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Software Model</a>
+              <a class="nav-link js-scroll-trigger" href="#softwaremodel">Software Model</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -62,14 +62,17 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-1"><b>DREAMPLANR</b></h1>
+                <img src="img/logo-icon.png" alt="">
+                <br>
+                <br>
+              <h1 class="mb-1"><b>DREAMPLANR.</b></h1>
               <h3 class="mb-5">Dream, Plan, Succeed.</h3>
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">What is DREAMPLANR?</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
             <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
+              <div class="device-mockup nexus_6 portrait">
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
@@ -90,8 +93,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">Ever had a problem on tracking your dream?</h2>
-            <p>Our app is available on any mobile device! Download now to get started!</p>
+            <h2 class="section-heading">Ever had a problem on tracking your dreams?</h2>
+            <p>DREAMPLANR is a mobile app to help you keep in touch with your life goals. You can make some plans to reach your goals and set due dates. Stay motivated with your own life goals even on your busiest day!</p>
             <!--<div class="badges">
               <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
               <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -104,18 +107,18 @@
     <section class="features" id="features">
       <div class="container">
         <div class="section-heading text-center">
-          <h2>Unlimited Features, Unlimited Fun</h2>
-          <p class="text-muted">Check out what you can do with this dream tracker!</p>
+          <h2>What can this app do?</h2>
+          <p class="text-muted">Check out what you can do with this life goal tracker app!</p>
           <hr>
         </div>
         <div class="row">
           <div class="col-lg-4 my-auto">
             <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
+              <div class="device-mockup nexus_6 portrait">
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
+                    <img src="img/mockup.gif" class="img-fluid" alt="">
                   </div>
                   <div class="button">
                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -129,32 +132,32 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-screen-smartphone text-primary"></i>
-                    <h3>Device Mockups</h3>
-                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                    <i class="icon-target text-primary"></i>
+                    <h3>Track Your Life Goal, Set Plans</h3>
+                    <p class="text-muted">Your life goal will be tracked so you can be motivated everytime. Set your plans inside bucket list regarding to your life goals.</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-camera text-primary"></i>
-                    <h3>Flexible Use</h3>
-                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                    <i class="icon-pie-chart text-primary"></i>
+                    <h3>Plan Stats and Summary</h3>
+                    <p class="text-muted">Check how your plan progresses goes. DREAMPLANR will show you the stats of your plans you've set and done.</p>                    
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-present text-primary"></i>
-                    <h3>Free to Use</h3>
-                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                    <i class="icon-bulb text-primary"></i>
+                    <h3>Stay Inspired, Check Other Ideas</h3>
+                    <p class="text-muted">Stay inspired to do and set more plan from other users. You can befriend with them.</p>                    
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-lock-open text-primary"></i>
-                    <h3>Open Source</h3>
-                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                    <i class="icon-bell text-primary"></i>
+                    <h3>Reminder</h3>
+                    <p class="text-muted">DREAMPLANR will keep in touch and remind you about your plans on your busy life.</p>
                   </div>
                 </div>
               </div>
@@ -167,8 +170,9 @@
     <section class="cta">
       <div class="cta-content">
         <div class="container">
-          <h2>Stop waiting.<br>Start building.</h2>
-          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+          <h2>Software Model</h2>
+          <h4>Checkout the software model of DREAMPLANR.</h4>
+          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">View Use Case UML</a>
         </div>
       </div>
       <div class="overlay"></div>
@@ -178,7 +182,7 @@
       <div class="container">
         <h2>Stay Updated 
           <i class="fa fa-heart"></i>
-           !</h2>
+          </h2>
         <ul class="list-inline list-social">
           <li class="list-inline-item social-github">
             <a href="https://github.com/rhaerma">
